# oop-labs

lab1/task1/: CMakeLists.txt  main.cpp
lab1/task1/Tests/: runTests.sh
lab1/task1/Tests/CorrectWorkBigFile/: additionalFile.txt  expectedOutput.txt  input.txt
lab1/task1/Tests/CorrectWorkSmallFile/: additionalFile.txt  expectedExitMessage.txt  expectedOutput.txt  input.txt
lab1/task1/Tests/EmptyFile/: input.txt
lab1/task1/Tests/LastCharsInTheFile/: input.txt
lab1/task1/Tests/NegativeNumberChecking/: expectedExitMessage.txt  input.txt
lab1/task1/Tests/OutOfBoundsByFragmentSize/: expectedExitMessage.txt  input.txt
lab1/task1/Tests/OutOfBoundsByStartPosition/: input.txt
lab1/task2/: CMakeLists.txt  main.cpp
lab1/task3/: CMakeLists.txt  input.txt  main.cpp  output.txt
lab1/task3/LinearAlgebra/: CMakeLists.txt  LinearAlgebra.cpp  LinearAlgebra.h
lab1/task3/Tests/: runTests.sh
lab1/task3/Tests/FileDoesntExist/: expectedExitMessage.txt  input.txt
lab1/task3/Tests/IncorrectInput/: additionalFile.txt  expectedExitMessage.txt  input.txt
lab1/task3/Tests/NonSingularMatrixWithNegativeDeterminant/: additionalFile.txt  expectedExitMessage.txt  input.txt
lab1/task3/Tests/NonSingularMatrixWithPositiveDeterminant/: expectedExitMessage.txt  input.txt
lab1/task3/Tests/NonSingularMatrixWithSmallNumbers/: additionalFile.txt  input.txt
lab1/task3/Tests/SingularMatrix/: expectedExitMessage.txt  input.txt
lab1/task3/Tests/TriangularMatrix/: additionalFile.txt  expectedExitMessage.txt  input.txt
lab1/task4/: main.cpp  output.txt
lab1/task4/Tests/FieldIsLargerThanAllowedSize/: additionalFile.txt
lab1/task4/Tests/ManyStartPointsInDifferentAreas/: expectedOutput.txt  input.txt
lab1/task4/Tests/ManyStartPointsInOneArea/: additionalFile.txt
lab1/task4/Tests/NestedAreas/: expectedOutput.txt  input.txt
lab1/task4/Tests/NestedAreasWithBrokenWalls/: expectedOutput.txt
lab1/task4/Tests/OneStartPointWithBrokenWalls/: input.txt
lab1/task4/Tests/OneStartPointWithoutBrokenWalls/: expectedOutput.txt  input.txt
lab1/task5/: CMakeLists.txt
lab1/task5/Tests/: runTests.sh
lab1/task5/Tests/AreaAtFieldBorder/: additionalFile.txt  expectedOutput.txt  input.txt
lab1/task5/Tests/FieldIsLargerThanAllowedSize/: expectedOutput.txt  input.txt
lab1/task5/Tests/ManyStartPointsInDifferentAreas/: additionalFile.txt
lab1/task5/Tests/ManyStartPointsInOneArea/: expectedOutput.txt  input.txt
lab1/task5/Tests/NestedAreas/: additionalFile.txt
lab1/task5/Tests/NestedAreasWithBrokenWalls/: additionalFile.txt  input.txt
lab2/task1/: CMakeLists.txt  main.cpp
lab2/task1/Tests/: CMakeLists.txt  VectorProcessingTests.cpp
lab2/task1/VectorProcessing/: CMakeLists.txt  VectorProcessing.cpp  VectorProcessing.h
lab2/task2/: CMakeLists.txt  main.cpp
lab2/task2/HtmlDecoder/: CMakeLists.txt  HtmlDecoder.cpp  HtmlDecoder.h
lab2/task2/Tests/: CMakeLists.txt  HtmlDecoderTests.cpp
lab2/task3/: CMakeLists.txt  main.cpp
lab2/task3/EratostheneSieve/: CMakeLists.txt  EratostheneSieve.cpp  EratostheneSieve.h
lab2/task3/Tests/: CMakeLists.txt  EratostheneSieveTests.cpp
(+3 files in other folders)
